Feat: change data display

--- a/userDashboard.html
+++ b/userDashboard.html
@@ -66,7 +66,7 @@
     <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
         <div class="hero-container" data-aos="fade-in">
             <h1>Adebayo Drako</h1>
-            <p>I'm <span class="typed" data-typed-items="a Cloud Engineer, a Senior Architect"></span></p>
+            <p>I'm <span class="typed" data-typed-items="an Engine Developer"></span></p>
         </div>
     </section>
     <!-- End Hero -->
@@ -87,13 +87,14 @@
                         <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                        <h3>Lead Software Architect &amp; Engine Developer.</h3>
+                        <h3>Engine Developer.</h3>
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-lg-12">
                                 <ul>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>35</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Gender:</strong> <span>Male</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>Bayero University, Kano</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>Bayero University, Kano</span><span style="margin-left: .5rem; background-color: #149DDD; border-radius: .5rem; padding: .3rem;"><i style="color: white;">2004 - 2011</i></span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> <span>Nigeria</span></li>
                                 </ul>
                             </div>
 
