--- a/userDashboard.html
+++ b/userDashboard.html
@@ -39,12 +39,15 @@
         <div class="d-flex flex-column">
 
             <div class="profile">
-                <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+                <img src="landingPageAssets/img/drako.jpeg" alt="" class="img-fluid rounded-circle">
                 <h1 class="text-light"><a href="register.html">Adebayo Drako</a></h1>
                 <div class="social-links mt-3 text-center">
                     <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
                     <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
                     <a href="#" class="google-plus"><i class="bx bxl-github"></i></a>
+                </div>
+                <div class="d-flex justify-content-center mt-3">
+                    <button class="btn btn-outline-primary">Edit Profile</button>
                 </div>
             </div>
 
@@ -63,11 +66,14 @@
     <!-- End Header -->
 
     <!-- ======= Hero Section ======= -->
-    <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-        <div class="hero-container" data-aos="fade-in">
-            <h1>Adebayo Drako</h1>
-            <p>I'm <span class="typed" data-typed-items="an Engine Developer"></span></p>
+    <section>
+        <div id="hero" class="d-flex flex-column justify-content-center align-items-center">
+            <div class="hero-container" data-aos="fade-in">
+                <h1>Adebayo Drako</h1>
+                <p>I'm <span class="typed" data-typed-items="an Engine Developer"></span></p>
+            </div>
         </div>
+
     </section>
     <!-- End Hero -->
 
