--- a/userDashboard.html
+++ b/userDashboard.html
@@ -55,7 +55,7 @@
                 <ul>
                     <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
                     <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-                    <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Experience</span></a></li>
+                    <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-star"></i> <span>Experience</span></a></li>
                     <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
                     <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Specialty</span></a></li> -->
                 </ul>
@@ -90,7 +90,7 @@
 
                 <div class="row">
                     <div class="col-lg-4" data-aos="fade-right">
-                        <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+                        <img src="landingPageAssets/img/drako.jpeg" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                         <h3>Engine Developer.</h3>
