--- a/userDashboard.html
+++ b/userDashboard.html
@@ -90,7 +90,7 @@
 
                 <div class="row">
                     <div class="col-lg-4" data-aos="fade-right">
-                        <img src="landingPageAssets/img/drako.jpeg" class="img-fluid" alt="">
+                        <img style="border-radius: 1rem;" src="landingPageAssets/img/drako.jpeg" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                         <h3>Engine Developer.</h3>
