--- a/userDashboard.html
+++ b/userDashboard.html
@@ -46,6 +46,7 @@
                     <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
                     <a href="#" class="google-plus"><i class="bx bxl-github"></i></a>
                 </div>
+
                 <div class="d-flex justify-content-center mt-3">
                     <button class="btn btn-outline-primary">Edit Profile</button>
                 </div>
@@ -55,7 +56,7 @@
                 <ul>
                     <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
                     <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-                    <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-star"></i> <span>Experience</span></a></li>
+                    <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Experience</span></a></li>
                     <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
                     <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Specialty</span></a></li> -->
                 </ul>
@@ -66,14 +67,11 @@
     <!-- End Header -->
 
     <!-- ======= Hero Section ======= -->
-    <section>
-        <div id="hero" class="d-flex flex-column justify-content-center align-items-center">
-            <div class="hero-container" data-aos="fade-in">
-                <h1>Adebayo Drako</h1>
-                <p>I'm <span class="typed" data-typed-items="an Engine Developer"></span></p>
-            </div>
+    <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+        <div class="hero-container" data-aos="fade-in">
+            <h1>Adebayo Drako</h1>
+            <p>I'm <span class="typed" data-typed-items="a Cloud Engineer, a Senior Architect"></span></p>
         </div>
-
     </section>
     <!-- End Hero -->
 
@@ -93,14 +91,15 @@
                         <img style="border-radius: 1rem;" src="landingPageAssets/img/drako.jpeg" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                        <h3>Engine Developer.</h3>
+                        <h3>Lead Software Architect &amp; Engine Developer.</h3>
                         <div class="row">
                             <div class="col-lg-12">
                                 <ul>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>35</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Gender:</strong> <span>Male</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>Bayero University, Kano</span><span style="margin-left: .5rem; background-color: #149DDD; border-radius: .5rem; padding: .3rem;"><i style="color: white;">2004 - 2011</i></span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> <span>Nigeria</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Nationlity:</strong> <span>Nigeria</span></li>
+
                                 </ul>
                             </div>
 
