Feat: edit about section

--- a/editProfile.html
+++ b/editProfile.html
@@ -76,32 +76,107 @@
                     </div>
                     <div class="modal-body">
 
-                        <div style="background-color: #173b6c; height: 15rem;">
-                            <!-- ======= Cover Photo ======= -->
-                            <img style="height: 100%; width: 100%; background-size: cover; border-radius: .3rem; cursor: pointer;" src="landingPageAssets/img/drako.jpeg" alt="" srcset="">
-                            <div class="d-flex justify-content-end" style="margin: -2rem .3rem;">
-                                <div style="margin-top: -.5rem; background-color: #149DDD; border-radius: 100px; padding: 0px 0px 0px 2px;" class="avartar-picker">
-                                    <input type="file" name="file-1[]" id="file-1" class="inputfile" data-multiple-caption="{count} files selected" multiple />
-                                    <label for="file-1">
-                                        <i style="font-size: 15px; color: white; padding: 3px;" class="bi bi-pencil"></i>
-                                    </label>
-                                </div>
-                            </div>
+                        <div style="height: 100vh; overflow-y: scroll;">
 
-                            <!-- ======= Profile Photo ======= -->
-                            <div style="margin-top: -5rem; width: 10rem;">
-                                <img style="border: 5px solid #149DDD;" src="landingPageAssets/img/drako.jpeg" alt="" class="img-fluid rounded-circle">
-                                <div class="d-flex justify-content-center" style="margin-top: -2rem;">
+
+                            <div style="background-color: #173b6c; height: 15rem;">
+                                <!-- ======= Cover Photo ======= -->
+                                <img style="height: 100%; width: 100%; background-size: cover; border-radius: .3rem; cursor: pointer;" src="images/Rectangle 3.png" alt="" srcset="">
+                                <div class="d-flex justify-content-end" style="margin: -2rem .3rem;">
                                     <div style="margin-top: -.5rem; background-color: #149DDD; border-radius: 100px; padding: 0px 0px 0px 2px;" class="avartar-picker">
                                         <input type="file" name="file-1[]" id="file-1" class="inputfile" data-multiple-caption="{count} files selected" multiple />
                                         <label for="file-1">
-                                            <i style="font-size: 15px; color: white; padding: 3px;" class="bi bi-pencil"></i>
-                                        </label>
+                                        <i style="font-size: 15px; color: white; padding: 3px;" class="bi bi-pencil"></i>
+                                    </label>
                                     </div>
                                 </div>
+
+                                <!-- ======= Profile Photo ======= -->
+                                <div style="margin-top: -3rem; width: 7rem;">
+                                    <img style="border: 5px solid #149DDD;" src="landingPageAssets/img/drako.jpeg" alt="" class="img-fluid rounded-circle">
+                                    <div class="d-flex justify-content-center" style="margin-top: -2rem;">
+                                        <div style="margin-top: -.5rem; background-color: #149DDD; border-radius: 100px; padding: 0px 0px 0px 2px;" class="avartar-picker">
+                                            <input type="file" name="file-1[]" id="file-1" class="inputfile" data-multiple-caption="{count} files selected" multiple />
+                                            <label for="file-1">
+                                            <i style="font-size: 15px; color: white; padding: 3px;" class="bi bi-pencil"></i>
+                                        </label>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+
+
+                            <!-- ======= Form ======= -->
+                            <div style="margin-top: 5rem;" class="form-row">
+                                <div class="form-holder d-flex">
+                                    <p style="font-size: 14px; margin-top: 12px;">First Name:</p>
+                                    <input style="border: none; width: 13rem; height: 1.3rem; margin-top: 13px;" type="text" placeholder="Adebayo" class="form-control">
+                                </div>
+                                <div class="form-holder d-flex">
+                                    <p style="font-size: 14px; margin-top: 12px;">Last Name:</p>
+                                    <input style="border: none; width: 13rem; height: 1.3rem; margin-top: 13px;" type="text" placeholder="Drako" class="form-control">
+                                </div>
+
+                                <div class="form-holder d-flex">
+                                    <p style="font-size: 14px; margin-top: 12px;">Age:</p>
+                                    <input style="border: none; width: 13rem; height: 1.3rem; margin-top: 13px;" type="text" placeholder="35" class="form-control">
+                                </div>
+                                <div class="form-holder d-flex">
+                                    <div class="d-flex">
+                                        <p style="font-size: 14px; margin-top: 12px;">Education:</p>
+                                        <input style="border: none; width: 8rem; height: 1.3rem; margin-top: 13px;" type="text" placeholder="Bayero University" class="form-control">
+                                    </div>
+
+                                    <div class="d-flex">
+                                        <p style="font-size: 14px; margin-top: 12px;">Year:</p>
+                                        <input style="border: none; width: 7rem; height: 1.3rem; margin-top: 13px;" type="text" placeholder="2004 - 2011" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="form-holder d-flex">
+                                    <div class="d-flex">
+                                        <p style="font-size: 14px; margin-top: 12px;">Nationlity:</p>
+                                        <input style="border: none; width: 8rem; height: 1.3rem; margin-top: 13px;" type="text" placeholder="Nigeria" class="form-control">
+                                    </div>
+
+                                    <div class="d-flex">
+                                        <p style="font-size: 14px; margin-top: 12px;">City:</p>
+                                        <input style="border: none; width: 8rem; height: 1.3rem; margin-top: 13px;" type="text" placeholder="Kano" class="form-control">
+                                    </div>
+                                </div>
+
+                                <div class="form-holder d-flex">
+                                    <div class="d-flex">
+                                        <p style="font-size: 14px; margin-top: 12px;">Tittle:</p>
+                                        <input style="border: none; width: 8rem; height: 1.3rem; margin-top: 13px;" type="text" placeholder="Engine Developer" class="form-control">
+                                    </div>
+
+                                    <div style="margin-top: .8rem; margin-left: 1rem;" class="checkbox-tick">
+                                        <label class="male">
+                                                <input type="radio" name="gender" value="male" checked> Male<br>
+                                                <span class="checkmark"></span>
+                                            </label>
+                                        <label class="female">
+                                                <input type="radio" name="gender" value="female"> Female<br>
+                                                <span class="checkmark"></span>
+                                            </label>
+                                    </div>
+                                </div>
+
+                                <div class="form-holder d-flex">
+                                    <div class="form-row">
+                                        <div class="form-holder w-100">
+                                            <textarea name="" cols="50" id="" placeholder="Professional Summary" class="form-control" style="height: 99px;"></textarea>
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
 
                         </div>
+
+
+
                         <div class="modal-footer modal-footer-fixed">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             <button type="button" class="btn btn-primary">Save changes</button>
