--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -38,12 +38,12 @@
         <div class="d-flex flex-column">
 
             <div class="profile">
-                <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-                <h1 class="text-light"><a href="index.html">Adebayo Drako</a></h1>
+                <img style="width: 9rem; height: 9rem; border-radius: 100px;" src="images/Picture 2.png" alt="" class="img-fluid rounded-circle">
+                <h1 class="text-light"><a href="register.html">Muhammad Salisu</a></h1>
                 <div class="social-links mt-3 text-center">
-                    <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                    <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                    <a href="#" class="google-plus"><i class="bx bxl-github"></i></a>
+                    <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
+                    <a href="https://www.linkedin.com/in/muhammadsalisu/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                    <a href="https://www.github.com/Muhammadbravo/" class="google-plus"><i class="bx bxl-github"></i></a>
                 </div>
             </div>
 
@@ -86,17 +86,17 @@
                         <div class="portfolio-details-slider swiper">
                             <div class="swiper-wrapper align-items-center">
 
-                                <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                                <div style="height: 35rem;" class="swiper-slide">
+                                    <img src="assets/img/portfolio/chess.gif" alt="">
                                 </div>
 
-                                <div class="swiper-slide">
+                                <!-- <div class="swiper-slide">
                                     <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
                                 </div>
 
                                 <div class="swiper-slide">
                                     <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
-                                </div>
+                                </div> -->
 
                             </div>
                             <div class="swiper-pagination"></div>
@@ -106,16 +106,18 @@
                     <div class="col-lg-4">
                         <div class="portfolio-info">
                             <ul>
-                                <li><strong>Name</strong>: Blue Berry</li>
+                                <li><strong>Name</strong>: Chess Engine</li>
                                 <li><strong>Category</strong>: AI</li>
-                                <li><strong>Client</strong>: ASU Company</li>
-                                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                                <li><strong>Client</strong>: Gamma Prime</li>
+                                <li><strong>Link</strong>:
+                                    <a href="https://www.github.com/drak00/steam-chess">Steam-Chess</a>
+                                </li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
                             <h6><strong>Description</strong></h6>
                             <p>
-                                Description of this project goes in here Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, porro. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus, expedita!
+                                STEAM CHESS ENGINE (named after Steamledge), is a Chess engine focused on Artificial Intelligence written in Python (using python 3.7.7 and pygame 1.9.6).
                             </p>
                         </div>
                     </div>
