--- a/userDashboard.html
+++ b/userDashboard.html
@@ -39,12 +39,12 @@
         <div class="d-flex flex-column">
 
             <div class="profile">
-                <img src="landingPageAssets/img/drako.jpeg" alt="" class="img-fluid rounded-circle">
-                <h1 class="text-light"><a href="register.html">Adebayo Drako</a></h1>
+                <img style="width: 9rem; height: 9rem; border-radius: 100px;" src="images/Picture 2.png" alt="" class="img-fluid rounded-circle">
+                <h1 class="text-light"><a href="register.html">Muhammad Salisu</a></h1>
                 <div class="social-links mt-3 text-center">
-                    <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                    <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                    <a href="#" class="google-plus"><i class="bx bxl-github"></i></a>
+                    <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
+                    <a href="https://www.linkedin.com/in/muhammadsalisu/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                    <a href="https://www.github.com/Muhammadbravo/" class="google-plus"><i class="bx bxl-github"></i></a>
                 </div>
 
                 <a href="editProfile.html" class="d-flex justify-content-center mt-3">
@@ -69,8 +69,8 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
         <div class="hero-container" data-aos="fade-in">
-            <h1>Adebayo Drako</h1>
-            <p>I'm <span class="typed" data-typed-items="an Engine Developer"></span></p>
+            <h1>Muhammad Salisu</h1>
+            <p>I'm <span class="typed" data-typed-items="a Python Developer, a Data Scientist"></span></p>
         </div>
     </section>
     <!-- End Hero -->
@@ -83,19 +83,19 @@
 
                 <div class="section-title">
                     <h2>About</h2>
-                    <p>Professional summary about yourself goes here Lorem ipsum dolor sit amet. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi, ut?</p>
+                    <p>Am a Pyhon Develope passsionate about Data Science, Machine Learning and Artificial Intelligence.</p>
                 </div>
 
                 <div class="row">
                     <div class="col-lg-4" data-aos="fade-right">
-                        <img style="border-radius: 1rem;" src="landingPageAssets/img/drako.jpeg" class="img-fluid" alt="">
+                        <img style="border-radius: 1rem;" src="images/Picture 1.png" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                        <h3>Engine Developer.</h3>
+                        <h3>Python Developer.</h3>
                         <div class="row">
                             <div class="col-lg-12">
                                 <ul>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>35</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Gender:</strong> <span>Male</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>Bayero University, Kano</span><span style="margin-left: .5rem; background-color: #149DDD; border-radius: .5rem; padding: .3rem;"><i style="color: white;">2004 - 2011</i></span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Nationlity:</strong> <span>Nigeria</span></li>
@@ -124,21 +124,21 @@
                     <div class="col-lg-6" data-aos="fade-up">
 
                         <div class="progress">
-                            <span class="skill">HTML <i class="val">100%</i></span>
+                            <span class="skill">Machine Learning <i class="val">80%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">CSS <i class="val">90%</i></span>
+                            <span class="skill">PostgreSQL <i class="val">90%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">JavaScript <i class="val">75%</i></span>
+                            <span class="skill">NLP <i class="val">75%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
@@ -149,21 +149,21 @@
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
                         <div class="progress">
-                            <span class="skill">PHP <i class="val">80%</i></span>
+                            <span class="skill">Computer Vision <i class="val">80%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+                            <span class="skill">Web Scrapping <i class="val">90%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">Photoshop <i class="val">55%</i></span>
+                            <span class="skill">Django <i class="val">55%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
@@ -189,51 +189,41 @@
                     <div class="col-lg-6" data-aos="fade-up">
                         <h3 class="resume-title">Sumary</h3>
                         <div class="resume-item pb-0">
-                            <h4>Alex Smith</h4>
-                            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+                            <h4>Prior Pythoneers Challenge</h4>
                             <ul>
-                                <li>Portland par 127,Orlando, FL</li>
-                                <li>(123) 456-7891</li>
-                                <li>alice.barkley@example.com</li>
+                                <li>WordPress Developer</li>
+                                <li>C</li>
+                                <li>Arduino</li>
                             </ul>
                         </div>
 
-                        <h3 class="resume-title">Education</h3>
                         <div class="resume-item">
-                            <h4>Master of Fine Arts &amp; Graphic Design</h4>
-                            <h5>2015 - 2016</h5>
-                            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-                        </div>
-                        <div class="resume-item">
-                            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-                            <h5>2010 - 2014</h5>
-                            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+                            <h4>Post Pythoneers Challenge</h4>
+                            <h5>June - December / 2019</h5>
+                            <ul>
+                                <li>Git &amp; Github </li>
+                                <li>Python</li>
+                                <li>AI</li>
+                                <li>Machine Learning</li>
+                                <li>NLP</li>
+                                <li>DJango</li>
+                                <li>Computer Vision</li>
+                                <li>Web Scrapping</li>
+                                <li>PostgreSQL</li>
+
+                            </ul>
                         </div>
                     </div>
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                         <h3 class="resume-title">Professional Experience</h3>
                         <div class="resume-item">
-                            <h4>Senior graphic design specialist</h4>
-                            <h5>2019 - Present</h5>
-                            <p><em>Experion, New York, NY </em></p>
+                            <h4>Innovation Engineer</h4>
+                            <h5>2021 - Present</h5>
+                            <p><em>Steamledge Limited </em></p>
                             <ul>
-                                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-                            </ul>
-                        </div>
-                        <div class="resume-item">
-                            <h4>Graphic design specialist</h4>
-                            <h5>2017 - 2018</h5>
-                            <p><em>Stepping Stone Advertising, New York, NY</em></p>
-                            <ul>
-                                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                                <li>Built a computational engine as a team on the BlueBerry Project</li>
+                                <li>Labeled data as part of the ML pipeline on the BlueBerry Project</li>
+                                <li>Built an ETL process for the ML pipeline on the BlueBerry Project</li>
                             </ul>
                         </div>
                     </div>
@@ -255,93 +245,30 @@
                     <div class="col-lg-12 d-flex justify-content-center">
                         <ul id="portfolio-flters">
                             <li data-filter="*" class="filter-active">All</li>
-                            <li data-filter=".filter-completed">Completed</li>
-                            <li data-filter=".filter-pending">Pending</li>
-                            <li data-filter=".filter-verified">Verified</li>
+                            <li data-filter=".filter-challenge">During Challenge</li>
+                            <li data-filter=".filter-professional">Innovation Engineer</li>
+                            <!-- <li data-filter=".filter-verified">Verified</li> -->
                         </ul>
                     </div>
                 </div>
 
                 <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-completed">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-challenge">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/chessBoard.png" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-pending">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-professional">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-                            <div class="portfolio-links">
+                            <img src="assets/img/portfolio/blogo.png" class="img-fluid" alt="">
+                            <!-- <div class="portfolio-links">
                                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-completed">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-                            <div class="portfolio-links">
-                                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-verified">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-                            <div class="portfolio-links">
-                                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-pending">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-                            <div class="portfolio-links">
-                                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-completed">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-                            <div class="portfolio-links">
-                                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-verified">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-                            <div class="portfolio-links">
-                                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-verified">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-                            <div class="portfolio-links">
-                                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-pending">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-                            <div class="portfolio-links">
-                                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
