--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex align-items-center">
         <div class="container" data-aos="zoom-out" data-aos-delay="100">
-            <h1><span>Gamma Prime</span></h1>
-            <h2>Democratising Access to AI</h2>
+            <h1><span><i style="color: #074764;">Gamma Prime</i></span></h1>
+            <h2 style="color: #000;"><b>Democratising Access to AI</b></h2>
             <div class="d-flex">
                 <a href="#about" class="btn-get-started scrollto">Get Started</a>
-                <a href="https://www.youtube.com/watch?v=IPukuYb9xWw" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+                <!-- <a href="https://www.youtube.com/watch?v=IPukuYb9xWw" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
             </div>
         </div>
     </section>
@@ -163,15 +163,22 @@
         <!-- End About Section -->
 
         <!-- ======= Clients Section ======= -->
-        <!-- <section id="clients" class="clients section-bg">
+        <section id="clients" class="clients section-bg">
             <div class="container" data-aos="zoom-in">
 
-                <div class="row">
+                <div class="section-title">
+                    <h3><span>Partners</span></h3>
+                </div>
+
+
+                <div class="row d-flex justify-content-center">
 
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="landingPageAssets/img/clients/client-1.png" class="img-fluid" alt="">
+                        <a href="https://steamledge.com/">
+                            <img src="assets/img/portfolio/steamledge_logo.png" class="img-fluid" alt="">
+                        </a>
                     </div>
-
+                    <!-- 
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
                         <img src="landingPageAssets/img/clients/client-2.png" class="img-fluid" alt="">
                     </div>
@@ -190,12 +197,12 @@
 
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
                         <img src="landingPageAssets/img/clients/client-6.png" class="img-fluid" alt="">
-                    </div>
+                    </div> -->
 
                 </div>
 
             </div>
-        </section> -->
+        </section>
         <!-- End Clients Section -->
 
         <!-- ======= Services Section ======= -->
