Fix: landing page bg

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex align-items-center">
         <div class="container" data-aos="zoom-out" data-aos-delay="100">
-            <h1><span><i style="color: #074764;">Gamma Prime</i></span></h1>
-            <h2 style="color: #000;"><b>Democratising Access to AI</b></h2>
+            <h1><span><i style="color: #149DDD;">Gamma Prime</i></span></h1>
+            <h2 style="color: #fff;"><b>Democratising Access to AI</b></h2>
             <div class="d-flex">
                 <a href="#about" class="btn-get-started scrollto">Get Started</a>
                 <!-- <a href="https://www.youtube.com/watch?v=IPukuYb9xWw" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
