UI fix && remove commet out team section temporarily

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li><a class="nav-link scrollto" href="#about">Mission</a></li>
                     <li><a class="nav-link scrollto" href="#services">Services</a></li>
                     <li><a class="nav-link scrollto " href="#portfolio">Products</a></li>
-                    <li><a class="nav-link scrollto" href="#team">Team</a></li>
+                    <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
                     <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
                 </ul>
                 <i style="color: white;" class="bi bi-list mobile-nav-toggle"></i>
@@ -66,7 +66,7 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex align-items-center">
         <div class="container" data-aos="zoom-out" data-aos-delay="100">
-            <h1><span><i style="color: #149DDD;">Gamma Prime</i></span></h1>
+            <h1><span><i style="color: #0b72a2;">Gamma Prime</i></span></h1>
             <h2 style="color: #fff;"><b>Democratising Access to AI</b></h2>
             <div class="d-flex">
                 <a href="#about" class="btn-get-started scrollto">Get Started</a>
@@ -232,14 +232,14 @@
                         </div>
                     </div>
 
-                    <div style="height: 2rem;" class="col-lg-6 col-md-6 mt-2" data-aos="zoom-in" data-aos-delay="1500">
+                    <div style="height: 2rem;" class="col-lg-6 col-md-6 mt-2" data-aos="zoom-in" data-aos-delay="1300">
                         <div class="icon-box-below">
                             <div class="icon"><i class="bx bxl-dribbble"></i></div>
                             <h4 style="font-size: 20px;"><a href="">Courses</a></h4>
                         </div>
                     </div>
 
-                    <div class="col-lg-6 col-md-6 mt-2" data-aos="zoom-in" data-aos-delay="1700">
+                    <div class="col-lg-6 col-md-6 mt-2" data-aos="zoom-in" data-aos-delay="1500">
                         <div class="icon-box-below">
                             <div class="icon"><i class="bx bx-file"></i></div>
                             <h4 style="font-size: 20px;"><a href="">Industries</a></h4>
@@ -346,66 +346,11 @@
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                         <img src="landingPageAssets/img/Rectangle.png" class="img-fluid" alt="">
                         <div class="portfolio-info">
-                            <h4>Product Name</h4>
+                            <h4>BlueBerry</h4>
                             <p>Comming soon</p>
-                            <a href="product-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+                            <a href="#" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <img src="landingPageAssets/img/Rectangle.png" class="img-fluid" alt="">
-                        <div class="portfolio-info">
-                            <h4>Product Name</h4>
-                            <p>Comming soon</p>
-                            <a href="product-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <img src="landingPageAssets/img/Rectangle.png" class="img-fluid" alt="">
-                        <div class="portfolio-info">
-                            <h4>Product Name</h4>
-                            <p>Comming soon</p>
-                            <a href="product-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <img src="landingPageAssets/img/Rectangle.png" class="img-fluid" alt="">
-                        <div class="portfolio-info">
-                            <h4>Product Name</h4>
-                            <p>Comming soon</p>
-                            <a href="product-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <img src="landingPageAssets/img/Rectangle.png" class="img-fluid" alt="">
-                        <div class="portfolio-info">
-                            <h4>Product Name</h4>
-                            <p>Comming soon</p>
-                            <a href="product-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <img src="landingPageAssets/img/Rectangle.png" class="img-fluid" alt="">
-                        <div class="portfolio-info">
-                            <h4>Product Name</h4>
-                            <p>Comming soon</p>
-                            <a href="product-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <img src="landingPageAssets/img/Rectangle.png" class="img-fluid" alt="">
-                        <div class="portfolio-info">
-                            <h4>Product Name</h4>
-                            <p>Comming soon</p>
-                            <a href="product-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-                        </div>
-                    </div>
-
 
                 </div>
 
@@ -414,7 +359,7 @@
         <!-- End Portfolio Section -->
 
         <!-- ======= Team Section ======= -->
-        <section id="team" class="team section-bg">
+        <!-- <section id="team" class="team section-bg">
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
@@ -491,7 +436,7 @@
                 </div>
 
             </div>
-        </section>
+        </section> -->
         <!-- End Team Section -->
 
         <!-- ======= Contact Section ======= -->
