Services icon update

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
                     <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                         <div class="icon-box">
-                            <div class="icon"><i class="bx bxl-dribbble"></i></div>
+                            <div class="icon"><i class="bi bi-graph-up-arrow"></i></div>
                             <h4><a href="">Supply</a></h4>
                             <p>We are accelerating the proliferation of AI-enabled solutions in industries feeding from local talent, thereby building a sustainable and thriving AI ecosystem in synergy with our counterparts abroad.</p>
                         </div>
@@ -226,7 +226,7 @@
 
                     <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                         <div class="icon-box">
-                            <div class="icon"><i class="bx bx-file"></i></div>
+                            <div class="icon"><i class="bi bi-graph-up-arrow"></i></div>
                             <h4><a href="">Demand</a></h4>
                             <p>We are accelerating the proliferation of AI-enabled solutions in industries feeding from local talent, thereby building a sustainable and thriving AI ecosystem in synergy with our counterparts abroad.</p>
                         </div>
@@ -234,14 +234,14 @@
 
                     <div style="height: 2rem;" class="col-lg-6 col-md-6 mt-2" data-aos="zoom-in" data-aos-delay="1300">
                         <div class="icon-box-below">
-                            <div class="icon"><i class="bx bxl-dribbble"></i></div>
+                            <div class="icon"><i class="bi bi-mortarboard"></i></div>
                             <h4 style="font-size: 20px;"><a href="">Courses</a></h4>
                         </div>
                     </div>
 
                     <div class="col-lg-6 col-md-6 mt-2" data-aos="zoom-in" data-aos-delay="1500">
                         <div class="icon-box-below">
-                            <div class="icon"><i class="bx bx-file"></i></div>
+                            <div class="icon"><i class="bi bi-bank"></i></div>
                             <h4 style="font-size: 20px;"><a href="">Industries</a></h4>
                         </div>
                     </div>
