--- a/userDashboard.html
+++ b/userDashboard.html
@@ -39,7 +39,7 @@
         <div class="d-flex flex-column">
 
             <div class="profile">
-                <img style="width: 9rem; height: 9rem; border-radius: 100px;" src="images/Picture 2.png" alt="" class="img-fluid rounded-circle">
+                <img style="width: 8rem; height: 8rem; border-radius: 100px;" src="images/Picture 2.png" alt="" class="img-fluid rounded-circle">
                 <h1 class="text-light"><a href="register.html">Muhammad Salisu</a></h1>
                 <div class="social-links mt-3 text-center">
                     <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
@@ -97,7 +97,7 @@
                                 <ul>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Gender:</strong> <span>Male</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>Bayero University, Kano</span><span style="margin-left: .5rem; background-color: #149DDD; border-radius: .5rem; padding: .3rem;"><i style="color: white;">2004 - 2011</i></span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>Bayero University, Kano</span><span style="margin-left: .5rem; background-color: #149DDD; border-radius: .5rem; padding: .3rem;"><i style="color: white;">2015 - Present</i></span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Nationlity:</strong> <span>Nigeria</span></li>
 
                                 </ul>
@@ -265,10 +265,10 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-professional">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/blogo.png" class="img-fluid" alt="">
-                            <!-- <div class="portfolio-links">
-                                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                            </div> -->
+                            <img src="assets/img/portfolio/blueberryProduct.png" class="img-fluid" alt="">
+                            <div class="portfolio-links">
+                                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                            </div>
                         </div>
                     </div>
 
