--- a/generalDashboard/people.html
+++ b/generalDashboard/people.html
@@ -82,11 +82,7 @@
                         </li>
 
 
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-
-                        <li>
+                        <!-- <li>
                             <a class="dropdown-item d-flex align-items-center" href="faq.html">
                                 <i class="bi bi-question-circle"></i>
                                 <span>Need Help?</span>
@@ -94,7 +90,7 @@
                         </li>
                         <li>
                             <hr class="dropdown-divider">
-                        </li>
+                        </li> -->
 
                         <li>
                             <a class="dropdown-item d-flex align-items-center" href="../index.html">
@@ -138,12 +134,12 @@
             </li>
             <!-- End Profile Page Nav -->
 
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link collapsed" href="faq.html">
                     <i class="bi bi-question-circle"></i>
                     <span>F.A.Q</span>
                 </a>
-            </li>
+            </li> -->
             <!-- End F.A.Q Page Nav -->
 
         </ul>
@@ -167,92 +163,18 @@
 
                             <div class="d-flex justify-content-between">
                                 <div class="pt-3 d-flex align-items-center">
-                                    <img style="width: 50px; height: 50px; border-radius: 100px; margin-right: .5rem;" src="../images/Rectangle 2.png" alt="" srcset="">
-                                    <p style="color: white;" class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i style="color: rgb(169, 169, 169);">Cloud Engineer</i></p>
+                                    <img style="width: 50px; height: 50px; border-radius: 100px; margin-right: .5rem;" src="../images/Picture 2.png" alt="" srcset="">
+                                    <p style="color: white;" class="mt-3">Muhammad Salisu <span><strong>-</strong></span> <i style="color: rgb(169, 169, 169);">Python Developer</i></p>
                                 </div>
 
                                 <div class="pt-3 d-flex align-items-center">
-                                    <b style="font-size: 12px; color: #fff; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
+                                    <b style="font-size: 12px; color: #fff; margin-right: 1rem;">1 yr <span><i class="bi bi-dot"></i></span></b>
                                     <a style="font-size: 1.3rem;" href="../userDashboard.html">
                                         <i class="bi bi-link"></i>
                                     </a>
                                 </div>
                             </div>
                             <hr class="dropdown-divider">
-
-                            <div class="d-flex justify-content-between">
-                                <div class="pt-3 d-flex align-items-center">
-                                    <img style="width: 50px; height: 50px; border-radius: 100px; margin-right: .5rem;" src="../images/Rectangle 3.png" alt="" srcset="">
-                                    <p style="color: white;" class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i style="color: rgb(169, 169, 169);">Cloud Engineer</i></p>
-                                </div>
-
-                                <div class="pt-3 d-flex align-items-center">
-                                    <b style="font-size: 12px; color: #fff; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
-                                    <a style="font-size: 1.3rem;" href="../userDashboard.html">
-                                        <i class="bi bi-link"></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <hr class="dropdown-divider">
-
-                            <div class="d-flex justify-content-between">
-                                <div class="pt-3 d-flex align-items-center">
-                                    <img style="width: 50px; height: 50px; border-radius: 100px; margin-right: .5rem;" src="../images/Rectangle 2.png" alt="" srcset="">
-                                    <p style="color: white;" class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i style="color: rgb(169, 169, 169);">Cloud Engineer</i></p>
-                                </div>
-
-                                <div class="pt-3 d-flex align-items-center">
-                                    <b style="font-size: 12px; color: #fff; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
-                                    <a style="font-size: 1.3rem;" href="../userDashboard.html">
-                                        <i class="bi bi-link"></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <hr class="dropdown-divider">
-
-                            <div class="d-flex justify-content-between">
-                                <div class="pt-3 d-flex align-items-center">
-                                    <img style="width: 50px; height: 50px; border-radius: 100px; margin-right: .5rem;" src="../images/Rectangle 2.png" alt="" srcset="">
-                                    <p style="color: white;" class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i style="color: rgb(169, 169, 169);">Cloud Engineer</i></p>
-                                </div>
-
-                                <div class="pt-3 d-flex align-items-center">
-                                    <b style="font-size: 12px; color: #fff; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
-                                    <a style="font-size: 1.3rem;" href="../userDashboard.html">
-                                        <i class="bi bi-link"></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <hr class="dropdown-divider">
-
-                            <div class="d-flex justify-content-between">
-                                <div class="pt-3 d-flex align-items-center">
-                                    <img style="width: 50px; height: 50px; border-radius: 100px; margin-right: .5rem;" src="../images/Rectangle 3.png" alt="" srcset="">
-                                    <p style="color: white;" class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i style="color: rgb(169, 169, 169);">Cloud Engineer</i></p>
-                                </div>
-
-                                <div class="pt-3 d-flex align-items-center">
-                                    <b style="font-size: 12px; color: #fff; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
-                                    <a style="font-size: 1.3rem;" href="../userDashboard.html">
-                                        <i class="bi bi-link"></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <hr class="dropdown-divider">
-
-                            <div class="d-flex justify-content-between">
-                                <div class="pt-3 d-flex align-items-center">
-                                    <img style="width: 50px; height: 50px; border-radius: 100px; margin-right: .5rem;" src="../images/Rectangle 2.png" alt="" srcset="">
-                                    <p style="color: white;" class="mt-3">Adebayo Drako <span><strong>-</strong></span> <i style="color: rgb(169, 169, 169);">Cloud Engineer</i></p>
-                                </div>
-
-                                <div class="pt-3 d-flex align-items-center">
-                                    <b style="font-size: 12px; color: #fff; margin-right: 1rem;">2 yrs <span><i class="bi bi-dot"></i></span></b>
-                                    <a style="font-size: 1.3rem;" href="../userDashboard.html">
-                                        <i class="bi bi-link"></i>
-                                    </a>
-                                </div>
-                            </div>
 
                         </div>
                     </div>
