--- a/generalDashboard/dashboard.html
+++ b/generalDashboard/dashboard.html
@@ -82,12 +82,7 @@
                             <hr class="dropdown-divider">
                         </li>
 
-
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-
-                        <li>
+                        <!-- <li>
                             <a class="dropdown-item d-flex align-items-center" href="faq.html">
                                 <i class="bi bi-question-circle"></i>
                                 <span>Need Help?</span>
@@ -95,7 +90,7 @@
                         </li>
                         <li>
                             <hr class="dropdown-divider">
-                        </li>
+                        </li> -->
 
                         <li>
                             <a class="dropdown-item d-flex align-items-center" href="../index.html">
@@ -139,12 +134,12 @@
             </li>
             <!-- End Profile Page Nav -->
 
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link collapsed" href="faq.html">
                     <i class="bi bi-question-circle"></i>
                     <span>F.A.Q</span>
                 </a>
-            </li>
+            </li> -->
             <!-- End F.A.Q Page Nav -->
 
         </ul>
