Fix: boostrap files bug fix

--- a/generalDashboard/dashboard.html
+++ b/generalDashboard/dashboard.html
@@ -76,7 +76,7 @@
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                         <li class="dropdown-header">
                             <h6>Adebayo Drako</h6>
-                            <span>Product Manager</span>
+                            <span>CEO</span>
                         </li>
                         <li>
                             <hr class="dropdown-divider">
