--- a/editProfile.html
+++ b/editProfile.html
@@ -47,6 +47,10 @@
                     <a href="https://www.github.com/Muhammadbravo/" class="google-plus"><i class="bx bxl-github"></i></a>
                 </div>
 
+                <a href="register.html" class="d-flex justify-content-center mt-3">
+                    <button class="btn btn-outline-primary">Sign Out</button>
+                </a>
+
             </div>
 
             <nav id="navbar" class="nav-menu navbar">
