Fix: redirect sign out to laning page

--- a/editProfile.html
+++ b/editProfile.html
@@ -47,7 +47,7 @@
                     <a href="https://www.github.com/Muhammadbravo/" class="google-plus"><i class="bx bxl-github"></i></a>
                 </div>
 
-                <a href="register.html" class="d-flex justify-content-center mt-3">
+                <a href="index.html" class="d-flex justify-content-center mt-3">
                     <button class="btn btn-outline-primary">Sign Out</button>
                 </a>
 
