Feat: typing effect

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
     <section id="hero" class="d-flex align-items-center">
         <div class="container" data-aos="zoom-out" data-aos-delay="100">
             <h1><span><i style="color: #0b72a2;">Gamma Prime</i></span></h1>
-            <h2 style="color: #fff;"><b>Democratising Access to AI</b></h2>
+            <!-- <h2 style="color: #fff;"><b>Democratising Access to AI</b></h2> -->
+            <h2 style="color: white;"><span class="typed" data-typed-items="Democratising Access to AI"></span></h2>
+
             <div class="d-flex">
                 <a href="#about" class="btn-get-started scrollto">Get Started</a>
                 <!-- <a href="https://www.youtube.com/watch?v=IPukuYb9xWw" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
@@ -595,6 +597,10 @@
     <script src="landingPageAssets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="landingPageAssets/vendor/waypoints/noframework.waypoints.js"></script>
     <script src="landingPageAssets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/vendor/typed.js/typed.min.js"></script>
+    <script src="typeEffect.js"></script>
+
+
 
     <!--  Main JS File -->
     <script src="landingPageAssets/js/main.js"></script>
